test/files/neg/t3098/a.scala
// Traits.scala
sealed trait T

trait A extends T
trait B extends T
trait C extends T
